# magflow

./: .gitignore  justfile  license.txt  main.py  mkdocs.yml  pyproject.toml  readme.md  requirements.txt
.github/workflows/: deploy.yml  mdbook.yml
.streamlit/: config.toml
core/: api.py  export.py  gui.py
docs/: book.toml  index.md  setup.md
docs/src/: SUMMARY.md  file-structure.md  intro.md  readme.md  update-deps.md
hemoflow/: cli.py  helpers.py  hemoflow.py  logger.py  streamlit.py
magflow/: backup.py  cli.py  logger.py  streamlit.py  ui.py  utils.py
magflow/commands/: build.py  check.py  clean.py  export.py  extract.py  load.py  patch.py  serve.py  visualize.py
magflow/notebooks/: analysis.ipynb  visualization.ipynb
magflow/utils/: data.py  dicom.py  energy.py  flow.py  helicity.py  loader.py  loading.py  logger.py  osi.py  pressure.py  utils.py  velocity.py  visualization.py  vorticity.py  vtk.py  wss.py
notebooks/: analysis.ipynb  visualization.ipynb
