[project]
name = "magflow"
version = "0.1.0"
description = "Visualize velocity image series from a phase contrast magnetic resonance imaging study as three-dimensional vector field."
readme = "readme.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit",
    "meshio",
    "pandas",
    "pydicom",
    "pyvista[jupyter]",
    "typer",
    "vtk",
    "matplotlib",
    "numpy",
    "tqdm",
    "scipy",
    "ipykernel",
]

[project.scripts]
magflow = "magflow.cli:app"

[dependency-groups]
dev = [
    "ipykernel"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
